// Mintora - Financial Tracker Database Schema
// DBML (Database Markup Language) Specification
// Visualize at: https://dbdiagram.io/

Project mintora {
  database_type: 'PostgreSQL'
  Note: 'Mintora Financial Tracker - AI-powered expense & income tracking via WhatsApp'
}

// ============================================
// User Management Domain
// ============================================

Table users {
  id uuid [pk, default: `gen_random_uuid()`]
  email varchar(255) [unique, note: 'Optional for WhatsApp-only users']
  username varchar(255) [unique]
  full_name varchar(255) [not null]
  role varchar(20) [not null, default: 'user', note: 'admin or user']
  status varchar(20) [not null, default: 'active', note: 'active, suspended, or deleted']
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
  deleted_at timestamp [null, note: 'Soft delete timestamp']

  indexes {
    role
    status
    created_at
  }

  Note: 'Core user accounts for web dashboard and WhatsApp integration'
}

Table whatsapp_clients {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [not null, ref: > users.id]
  phone_number varchar(20) [unique, not null, note: 'E.164 format: +628123456789']
  country_code varchar(5) [not null, default: '+62']
  is_verified boolean [not null, default: false]
  is_active boolean [not null, default: true]
  last_interaction_at timestamp [null, note: 'Last WhatsApp message timestamp']
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]

  indexes {
    phone_number
    user_id
    (user_id, is_active)
  }

  Note: 'Whitelisted WhatsApp numbers linked to user accounts'
}

// ============================================
// Transaction Domain
// ============================================

Table transactions {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [not null, ref: > users.id]
  type varchar(20) [not null, note: 'income or expense']
  amount decimal(15,2) [not null, note: 'Amount in IDR']
  currency varchar(3) [not null, default: 'IDR']
  category_id uuid [null, ref: > categories.id]
  payment_method_id uuid [null, ref: > payment_methods.id]
  merchant_name varchar(255) [null, note: 'Free-text merchant name']
  location varchar(255) [null]
  description text [null, note: 'User notes or AI-extracted description']
  transaction_date date [not null, note: 'When transaction actually occurred']
  source varchar(20) [not null, note: 'whatsapp or web']
  source_message_id varchar(255) [null, note: 'WhatsApp message ID for reference']
  attachment_urls jsonb [null, note: 'Array of receipt image URLs']
  metadata jsonb [null, note: 'Flexible field for future use']
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
  deleted_at timestamp [null, note: 'Soft delete timestamp']

  indexes {
    (user_id, transaction_date) [name: 'idx_user_date']
    (user_id, type) [name: 'idx_user_type']
    (user_id, type, transaction_date) [name: 'idx_user_type_date']
    category_id
    created_at
  }

  Note: 'Core financial transaction records (income & expenses)'
}

// ============================================
// Category Domain
// ============================================

Table categories {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [null, ref: > users.id, note: 'NULL for system categories']
  name varchar(100) [not null]
  type varchar(20) [not null, note: 'income, expense, or both']
  icon varchar(50) [null, note: 'Emoji or icon identifier']
  color varchar(7) [null, note: 'Hex color code: #FF5733']
  parent_category_id uuid [null, ref: > categories.id, note: 'For subcategories']
  is_system boolean [not null, default: false, note: 'System vs user-defined']
  is_active boolean [not null, default: true]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]

  indexes {
    user_id
    type
    (user_id, type)
    is_system
  }

  Note: 'Expense and income categories with hierarchical support'
}

Table category_aliases {
  id uuid [pk, default: `gen_random_uuid()`]
  category_id uuid [not null, ref: > categories.id]
  alias varchar(100) [not null, note: 'Alternative names for AI matching']
  created_at timestamp [not null, default: `now()`]

  indexes {
    alias
    category_id
    (category_id, alias) [unique]
  }

  Note: 'Help AI agent map variations to categories (e.g., "supermarket" → "Groceries")'
}

// ============================================
// Payment Methods Domain
// ============================================

Table payment_methods {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [null, ref: > users.id, note: 'NULL for system defaults']
  name varchar(100) [not null]
  type varchar(30) [not null, note: 'cash, card, bank_transfer, digital_wallet, other']
  last_4_digits varchar(4) [null, note: 'Last 4 digits for cards']
  is_system boolean [not null, default: false]
  is_active boolean [not null, default: true]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]

  indexes {
    user_id
    type
    (user_id, is_active)
  }

  Note: 'Payment methods (Cash, GoPay, OVO, Cards, etc.)'
}

// ============================================
// Merchants Domain
// ============================================

Table merchants {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [null, ref: > users.id, note: 'NULL for shared merchants']
  name varchar(255) [not null]
  default_category_id uuid [null, ref: > categories.id, note: 'AI learns merchant → category mapping']
  location varchar(255) [null]
  tags jsonb [null, note: 'Flexible tags array']
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]

  indexes {
    user_id
    name
    (user_id, name)
  }

  Note: 'Store vendor/merchant information for auto-categorization'
}

// ============================================
// Tags Domain (Optional but flexible)
// ============================================

Table tags {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [not null, ref: > users.id]
  name varchar(50) [not null]
  color varchar(7) [null, note: 'Hex color code']
  created_at timestamp [not null, default: `now()`]

  indexes {
    user_id
    (user_id, name) [unique]
  }

  Note: 'Flexible tagging system (e.g., business, personal, tax-deductible)'
}

Table transaction_tags {
  transaction_id uuid [not null, ref: > transactions.id]
  tag_id uuid [not null, ref: > tags.id]
  created_at timestamp [not null, default: `now()`]

  indexes {
    (transaction_id, tag_id) [pk]
    transaction_id
    tag_id
  }

  Note: 'Many-to-many relationship between transactions and tags'
}

// ============================================
// AI Conversation Domain
// ============================================

Table whatsapp_conversations {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [not null, ref: > users.id]
  whatsapp_client_id uuid [not null, ref: > whatsapp_clients.id]
  message_id varchar(255) [null, note: 'WhatsApp message ID']
  direction varchar(20) [not null, note: 'inbound or outbound']
  message_text text [not null]
  intent varchar(100) [null, note: 'log_expense, query_balance, edit_transaction, etc.']
  extracted_data jsonb [null, note: 'What AI extracted from message']
  confidence_score decimal(3,2) [null, note: '0.00 to 1.00']
  transaction_id uuid [null, ref: > transactions.id, note: 'If transaction was created']
  created_at timestamp [not null, default: `now()`]

  indexes {
    (user_id, created_at) [name: 'idx_user_created']
    transaction_id
    whatsapp_client_id
    intent
  }

  Note: 'Track WhatsApp chat sessions for context, debugging, and AI improvement'
}

// ============================================
// Audit & Security Domain
// ============================================

Table audit_logs {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [null, ref: > users.id, note: 'NULL for system actions']
  action varchar(100) [not null, note: 'create_transaction, delete_user, update_budget, etc.']
  entity_type varchar(50) [not null, note: 'transaction, user, category, etc.']
  entity_id uuid [not null]
  old_values jsonb [null, note: 'Before state']
  new_values jsonb [null, note: 'After state']
  ip_address varchar(45) [null]
  user_agent text [null]
  created_at timestamp [not null, default: `now()`]

  indexes {
    (user_id, created_at) [name: 'idx_user_created']
    (entity_type, entity_id) [name: 'idx_entity']
    action
    created_at
  }

  Note: 'Track all important actions for security, debugging, and compliance'
}
